--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -14,6 +14,9 @@
                     <a class="nav-link" href="/gestione-sport">Gestione Sport</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/convocazioni">Lista Convocazioni</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/calendario.ics">Calendario</a>
                 </li>
             </ul>
